--- a/views/jokes.ejs
+++ b/views/jokes.ejs
@@ -1,6 +1,7 @@
 <%- include('./partials/head') %>
 </head>
 <body>
+    <%- include('./partials/header.ejs') %>
     <h1>Jokes by category: <%= category %></h1>
 
     <% jokesList.forEach((joke)=> { %>
