--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,3 +8,4 @@
     <%= title %>
   </title>
   <link rel="stylesheet" href="/styles.css" type="text/css">
+  <script src="/newJoke.js" defer></script>
