--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,5 +8,5 @@
             </svg>
         </button>
     </div>
-    <img/>  <!--counter-balance for pie img-->
+    <a></a> <!-- counter-balance -->
 </header>
